# Smart_Inventory_Bot

./: README.md  pyproject.toml
data/: dump.sqlite.sql  sqlite.db
notebooks/: smart_inv_bot.ipynb  sqlite_db.ipynb
smart_inventory_bot/app_properties/: constant.py
smart_inventory_bot/components/: app.py  cohere_utils.py  function_schema.py  sqlite_utils.py
smart_inventory_bot/components/graph_components/: nodes.py  states.py
ui/: app.py
